<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="18dp"
        android:id="@+id/head"/>
    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/chocolate"
        android:textSize="18sp"
        android:id="@+id/cb_chocolate"/>
    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_chocolate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/Sprinkles"
        android:textSize="18sp"
        android:id="@+id/cb_sprin"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_sprin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/Crushed"
        android:textSize="18sp"
        android:id="@+id/cb_crus"/>
    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_crus"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/cherries"
        android:textSize="18sp"
        android:id="@+id/cb_cherri"/>
    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_cherri"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/orio"
        android:textSize="18sp"
        android:id="@+id/cb_orio"/>
    <Button
        android:id="@+id/buttonShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_orio"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:background="@color/background_show_toast"
        android:text="@string/show_toast"
        android:textColor="@color/text_show_toast"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_orio"
        android:text="@string/test"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"/>
</RelativeLayout>